# endorlabs-sdk

./: .cursorignore  .cursorindexingignore  .envrc  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .tmp_ruff_errors.txt  AGENTS.md  CONTRIBUTORS.md  DRIFT_REPORT.md  LICENSE  PULL_REQUEST_PREPARATION.md  README.md  _LOGBOOK_TEMPLATE.md  admission_policy_results.json  catalog-info.yaml  data_model_analysis.md  endor_resource_analyzer.py  env.example  main.py  model_consistency_report.json  policy_check_results.json  policy_enhanced_ci_results.json  pyproject.toml  recon_report.json  resource-guide.md  setup_env.bat  setup_env.ps1  setup_env.sh  setup_unicode_env.bat  setup_unicode_env.ps1  test_sast_findings.py  tmp_auth_probe.py
.cursor/: USER_RULES_SUGGESTION.md  mcp.json
.cursor/plans/: agent-sd-e0b9a3ea.plan.md  pre-release_checklist_dede5b39.plan.md
.cursor/rules/: This-repo-is-a-customer-facing-SDK-for-a-SaaS-AppSec-platform.mdc  _generated.json  agent-knowledge-authoring.mdc  api-workflow.mdc  architecture.mdc  code-review.mdc  docs-skillbase-consistency.mdc  endor-changelog.mdc  endor-cockpit-core.mdc  endor-local-context.mdc  (+21 more)
.endorctl/: scanprofile.yaml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
agent-knowledge/: AGENTS.md  INDEX.md  README.md  workflows.yaml
agent-skills/: INDEX.md  README.md  workflows.yaml
devtools/: README.md  agent_bundle_catalog.py  agent_knowledge_catalog.py  audit_consumer_surfaces.py  check_vcs_version.py  doc_facade_helpers.py  estate_collect_benchmark.py  find_projects_by_scan_created_by.py  generate_client_stub.py  generate_filter_enum_reference.py  generate_reference_docs.py  generate_resource_reference_pages.py  generate_route_contract.py  git_staged.py  history_purge_audit.py  history_purge_verify.py  model_sync.py  model_sync_pr_deltas.py  pre_commit_guards.py  probe_endor_mcp_tools.py  refresh_token_to_dotenv.py  run_phased_compile_graph.py  run_without_endor_token.py  smoke_test_published_install.py  smoke_test_wheel.py  split_dependency_explorer.py  sync_agent_bundle.py  sync_agent_knowledge.py  verify_portable_agent_content.py  verify_ship_artifacts.py
docs/: BEST_PRACTICES_ANALYSIS.md  CANONICAL_SOURCES.md  ENVIRONMENT_SETUP.md  ESSENTIAL_CONTEXT.md  MAINTENANCE.md  README.md  SPECIFICATION.md  STRUCTURE_ANALYSIS.md  _PROGRESSIVE_DISCLOSURE_TEMPLATE.md  changelog.md  contracts.md  conventions.md  customer-facing-resources.md  design.md  findings-github-checks-annotation-matrix.md  findings-pr-review-comment-matrix.md  findings-summary-report.md  package-dependency-visibility.md  policy-search-troubleshooting-findings.md  rego_guide.md  retrieving-scan-results.md
examples/: rag_integrations.py  standalone_cli.py
external_docs/: .gitkeep  openapi-swagger.json  sitemap.xml
githooks/: pre-commit
maneuvers/: calibrate_rules.py  check_dependency_visibility.py  cleanup_test_policies.py  compare_scan_logs.py  create_auth_policy.py  create_exception_policy.py  create_installation.py  create_namespace.py  create_notification_policy.py  create_notification_targets.py  create_pr_comments_action_policy.py  create_scan_profile.py  debug_dependency_metadata_performance.py  explore_finding_call_paths.py  export_semgrep_rule.py  find_scan_config_for_finding.ps1  find_scan_config_for_finding.py  find_scan_config_for_finding_commands.md  import_semgrep_rule.py  inspect_scan_result.py  integrate_jira.py  list_project_dependencies.py  list_resources_for_viz.py  re_enable_ai_model_rules.py  tag_findings.py  test_policy_search.py  triage_findings.py  verify_rule_enhancements.py  visualize_namespace_graph.py  visualize_resource_relationships.py
protocols/: triage_finding_protocol.md
scripts/: README.md  README_version_check.md  Set-EndorToken.ps1  _debug_idp.py  admin_setup.py  analyze_documentation_chunks.py  authenticate_browser.py  check_endorctl_version.py  check_endorctl_version.sh  check_package_age.py  create_drift_issues.py  create_service_request_nat.py  detect_schema_drift.py  drift_analyzer.py  endor_resource_analyzer.py  ensure_endor_token.py  ensure_github_oidc_policy.py  export_current_sdk_models.py  generate_client_stub.py  generate_reference_docs.py  list_orphaned_findings.py  model_sync.py  model_sync_pr_deltas.py  probe_endor_mcp_tools.py  recon_list_endpoints.py  refresh_token_to_dotenv.py  run-pytest.ps1  self_validation_scorecard.py  semgrep_rule_metadata_inventory.py  setup_environment.py  setup_oidc_policy.py  sync_external_docs.py  test_error_mapping_evidence.ps1  traverse_findings_estate.py  triage_findings.py  validate_environment.py  validate_holocron.py  validate_via_endorctl.ps1
skills-src/: README.md
tests/: README_integration.md  base_test.py  conftest.py  conftest_integration.py  test_analysis.py  test_api_client_auth.py  test_api_client_config.py  test_api_key.py  test_audit_log.py  test_auth_server.py  test_authentication_log.py  test_authorization_policy.py  test_base_update.py  test_chunking_optimization.py  test_cleanup_mechanisms.py  test_client_facade.py  test_code_owners.py  test_concurrent_list.py  test_content_types.py  test_context_init.py  test_dependency_metadata.py  test_documentation_chunks.py  test_endor_license.py  test_exceptions.py  test_external_docs.py  test_finding.py  test_finding_log.py  test_holocron_config.py  test_installation.py  test_integration.py  test_invitation.py  test_json_default_model.py  test_linter_result.py  test_metric.py  test_model_consistency.py  test_model_validation.py  test_namespaces.py  test_notification_target.py  test_openapi_spec.py  test_operations.py  (+24 more)
tmp/: openapiv2.swagger.json
workflow/: .vector_db_initialized  init_vector_db.py  test_vector_db.py  vector_db_manifest.json
workspace/: CI_OPTIMIZATION_SUMMARY.md  OPERATIONAL_CONTEXT.md  README.md  checkpoint-summary.md  container-packageversion-example.json  contingency-playbook.md  finding-policy-implementation-plan.md  log.md  logbook.md  patch-operations-discovery.md  plan.md  resource-operations-summary.md  tag-management-final-summary.md  workspace.py
(+1893 files in other folders)
